<resources>
    <string name="app_name">PlazaVeaDelivery</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="shared_pref_key">pveadelivery</string>
    <string name="login_titulo">Login</string>
    <string name="ingresa_con_correoycontra">Ingresa con tu correo y contraseña</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_contrasenia">Contraseña</string>
    <string name="mantener_sesion">Mantener sesión iniciada</string>
    <string name="boton_iniciarseison">Iniciar Sesión</string>
    <string name="detalle_orden">Detalle de orden</string>
    <string name="texto_ejemplo">Texto ejemplo</string>
    <string name="fecha_realizada_cv">Fecha de compra</string>
    <string name="direccion_titulo">Dirección</string>
    <string name="productos_titulo">Productos</string>
    <string name="monto">Monto</string>
    <string name="igv">IGV</string>
    <string name="total">Total</string>
    <string name="aceptar_pedido">Aceptar pedido</string>
    <string name="id_orden_cv">ID de Orden:</string>
    <string name="fecha_realizada">Fecha de compra:</string>
    <string name="fecha_entrega">Entrega estimada:</string>
    <string name="estado_pedido">Estado del pedido:</string>
    <string name="nombre_cliente">Nombre del cliente</string>
    <string name="label_producto">Producto:</string>
    <string name="label_preciounidad">Precio x Unidad:</string>
    <string name="label_cantidad">Cantidad:</string>
    <string name="label_preciototal">Precio Total:</string>
    <string name="title_pendientes">Órdenes Pendientes</string>
    <string name="title_asignados">Asignados</string>
    <string name="title_perfil">Perfil</string>
    <string name="te_asignaste">Te Asignaste</string>
    <string name="sin_asignar">Sin Asignar</string>
    <string name="direccion_cv">Dirección:</string>
    <string name="pagina">Página:</string>
    <string name="entregado_el">Entregado el día:</string>
    <string name="cancelado_el">Cancelado el día:</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="nombre_repartidor">Nombre:</string>
    <string name="apellido_repartidor">Apellido:</string>
    <string name="fn_repartidor">Fecha de nacimiento:</string>
    <string name="dni">DNI:</string>
    <string name="placa">Placa:</string>
    <string name="turno">Turno:</string>
    <string name="estado">Estado:</string>
    <string name="logout">Cerrar sesión</string>
    <string name="sin_asignados">Aún no te has asignado a ninguna orden</string>
    <string name="sin_pendientes">No hay órdenes pendientes</string>
    <string name="marcar_entregado">Marcar Como Entregado</string>
    <string name="ver_mapa">Ver en el Mapa</string>
    <string name="title_activity_ubicacion">Geolocalizador</string>
    <string name="tienda">Tienda:</string>
    <string name="email">Email:</string>
    <string name="cambiar_contrasena">Cambiar Contraseña</string>
    <string name="ingresa_nueva_contra">Completa los siguientes campos</string>
    <string name="hint_contraseniaact">Contraseña Actual</string>
    <string name="hint_nuevacontrasenia">Nueva Contraseña</string>
    <string name="hint_confirmarnuevacontra">Confirmar Nueva Contraseña</string>
    <string name="cambiar">Cambiar</string>
</resources>