<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_pendientes">

    <fragment
        android:id="@+id/navigation_pendientes"
        android:name="edu.pe.idat.plazaveadelivery.views.fragments.pendientes.PendientesFragment"
        android:label="@string/title_pendientes"
        tools:layout="@layout/fragment_pendientes" />

    <fragment
        android:id="@+id/navigation_asignados"
        android:name="edu.pe.idat.plazaveadelivery.views.fragments.asignados.AsignadosFragment"
        android:label="@string/title_asignados"
        tools:layout="@layout/fragment_asignados" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="edu.pe.idat.plazaveadelivery.views.fragments.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>