<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.perfil.PerfilFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressbarPerfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_fileName="pvloadingscreen.json"
        app:lottie_loop="true" />

    <LinearLayout
        android:id="@+id/llperfil"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/mi_perfil"
            android:layout_marginBottom="20dp"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/email"/>

            <TextView
                android:id="@+id/tvCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/texto_ejemplo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/nombre_repartidor"/>

            <TextView
                android:id="@+id/tvNombreRepartidor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/texto_ejemplo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/apellido_repartidor"/>

            <TextView
                android:id="@+id/tvApellidoRepartidor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/texto_ejemplo"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/dni"/>

            <TextView
                android:id="@+id/tvdni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/texto_ejemplo"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/tienda"/>

            <TextView
                android:id="@+id/tvtienda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/texto_ejemplo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/placa"/>

            <TextView
                android:id="@+id/tvplaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/texto_ejemplo"/>

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/btnlogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_button"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>