<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.home.OrderDetailActivity">


    <LinearLayout
        android:id="@+id/llorden"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/btnGoBackOrden"
                android:layout_width="39dp"
                android:layout_height="37dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic__arrow_back"
                tools:ignore="SpeakableTextPresentCheck" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/detalle_orden"
                android:layout_marginBottom="20dp"
                android:textSize="25sp" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/estado_pedido"/>

                    <TextView
                        android:id="@+id/tvEstadoPedido"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/estado_pedido"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/nombre_cliente"/>

                    <TextView
                        android:id="@+id/tvNombreCliente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/nombre_cliente"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/fecha_realizada_cv"/>

                    <TextView
                        android:id="@+id/tvFechaCompra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/fecha_realizada_cv"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/direccion_titulo"/>

                    <TextView
                        android:id="@+id/tv_detDireccion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/direccion_titulo"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/productos_titulo"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvProductosOrden"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/monto"/>

                    <TextView
                        android:id="@+id/tv_detMonto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/monto"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/igv"/>

                    <TextView
                        android:id="@+id/tv_detIGV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/igv"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/total"/>
                    <TextView
                        android:id="@+id/tv_detTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/total"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/btncancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aceptar_pedido"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_button"/>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>